values/eks-example/raw/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: external-nginx
  rules:
  - host: argocd.eks.kuberise.dev
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.eks.kuberise.dev
    secretName: argocd-server-tls
